<resources>
    <string name="app_name">JKU App</string>
    <string name="title_kusss">KUSSS</string>
    <string name="title_calendar">Stundenplan</string>
    <string name="title_exams">Prüfungen</string>
    <string name="title_grades">Noten</string>
    <string name="title_lvas">LVAs</string>
    <string name="title_stats">Statistik</string>
    <string name="title_campus">Campus</string>
    <string name="title_mensa">Mensa</string>
    <string name="title_map">Karte</string>
    <string name="title_oeh" translatable="false">ÖH</string>
    <string name="title_oeh_info">Info</string>
    <string name="title_oeh_rights">Rechte</string>
    <string name="title_settings">Einstellungen</string>
    <string name="title_about">About</string>
    <string name="action_refresh">Aktualisieren</string>
    <string name="action_changelog">Change Log</string>
    <string name="action_settings_summary">Einstellungen von KUSSS, Benachrichtigungen, …</string>
    <string name="action_snap_to_location">Karte zur aktuellen GPS-Position bewegen</string>
    <string name="action_tap_to_login">zum Einloggen tippen</string>
    <string name="grade_1">Sehr gut</string>
    <string name="grade_2">Gut</string>
    <string name="grade_3">Befriedigend</string>
    <string name="grade_4">Genügend</string>
    <string name="grade_5">Nicht genügend</string>
    <string name="grade_get">Mit Erfolg teilgenommen</string>
    <string name="grade_gb">Bestanden</string>
    <string name="grade_gab">Mit Auszeichnung bestanden</string>
    <string name="grade_unknown">Nicht bewertet</string>
    <string name="grade_type_interim_ca">Vorläufige Lehrveranstaltungsbeurteilungen</string>
    <string name="grade_type_final_ca">Lehrveranstaltungsbeurteilungen</string>
    <string name="grade_type_recognized_cc">Sonstige Beurteilungen</string>
    <string name="grade_type_recognized_a">Anerkannte Beurteilungen</string>
    <string name="grade_type_recognized_exam">Anerkannte Prüfungen</string>
    <string name="grade_type_final_exam">Prüfungen</string>
    <string name="grade_type_unknown">TODO</string>
    <string name="grade_type_all">alle Beurteilungen</string>
    <string name="grade_type_none_available">keine Noten verfügbar</string>
    <string name="notification_sync_connect">Verbindung wird aufgebaut</string>
    <string name="notification_sync_calendar">Termine werden synchronisiert</string>
    <string name="notification_sync_calendar_loading">Termine laden: %s</string>
    <string name="notification_sync_calendar_updating">Termine aktualisieren: %s</string>
    <string name="notification_sync_calendar_adding">Termine hinzufügen: %s</string>
    <string name="notification_sync_calendar_saving">Termine speichern: %s</string>
    <string name="notification_sync_exam">Prüfungen werden synchronisiert</string>
    <string name="notification_sync_exam_loading">Prüfungen laden</string>
    <string name="notification_sync_exam_updating">Prüfungen aktualisieren</string>
    <string name="notification_sync_exam_saving">Prüfungen speichern</string>
    <string name="notification_sync_assessment">Noten werden synchronisiert</string>
    <string name="notification_sync_assessment_loading">Noten laden</string>
    <string name="notification_sync_assessment_updating">Noten aktualisieren</string>
    <string name="notification_sync_assessment_saving">Noten speichern</string>
    <string name="notification_sync_lva">LVAs werden synchronisiert</string>
    <string name="notification_sync_lva_loading">LVAs laden</string>
    <string name="notification_sync_lva_updating">LVAs aktualisieren</string>
    <string name="notification_sync_lva_saving">LVAs speichern</string>
    <string name="notification_sync_curricula">Studienrichtungen werden synchronisiert</string>
    <string name="notification_sync_curricula_loading">Studienrichtungen laden</string>
    <string name="notification_sync_curricula_updating">Studienrichtungen aktualisieren</string>
    <string name="notification_sync_curricula_saving">Studienrichtungen speichern</string>
    <string name="notification_events_changed_title">Termine in "%s" geändert</string>
    <plurals name="notification_events_changed">
        <item quantity="one">Termin in "%2$s" geändert</item>
        <item quantity="other">%1$d Termin(e) in "%2$s" geändert</item>
    </plurals>
    <string name="notification_events_deleted_title">Termine aus "%s" entfernt</string>
    <plurals name="notification_events_deleted">
        <item quantity="one">Termin aus "%2$s" entfernt</item>
        <item quantity="other">%1$d Termin(e) aus "%2$s" entfernt</item>
    </plurals>
    <string name="notification_new_exams_title">neue Prüfungen gefunden</string>
    <plurals name="notification_new_exams">
        <item quantity="one">Eine neue Prüfung gefunden</item>
        <item quantity="other">%d neue Prüfungen gefunden</item>
    </plurals>
    <string name="pref_cat_update_password">Passwort aktualisieren</string>
    <string name="pref_kusss_sync_interval_summary">Intervall in dem die Daten synchronisiert werden</string>
    <string name="pref_kusss_sync_interval_title">Synchronisationsintervall</string>
    <string name="pref_kusss_notify_title">Benachrichtigen</string>
    <string name="pref_kusss_use_calendar_view_summary">Termine in einer Kalenderansicht anzeigen</string>
    <string name="pref_kusss_use_calendar_view_title">Kalenderansicht</string>
    <string name="pref_kusss_calendar_sync_summary">Termine vom aktuellen Semester aus KUSSS synchronisieren</string>
    <string name="pref_kusss_calendar_sync_title">Synchronisieren</string>
    <string name="pref_kusss_calendar_notify_summary">Benachrichtigen wenn sich Termine geändert haben</string>
    <string name="pref_kusss_calendar_extend_title">Kalender erweitern</string>
    <string name="pref_kusss_calendar_extend_summary">alle Termine werden in einen bestehenden Kalender importiert</string>
    <string name="pref_kusss_calendar_extended_title">Kalender</string>
    <string name="pref_kusss_calendar_extended_summary">der Kalender in den die Termine importiert werden</string>
    <string name="pref_kusss_grade_notify_summary">Benachrichtigen wenn neue Noten vorhanden sind</string>
    <string name="pref_kusss_exam_notify_summary">Benachrichtigen wenn neue LVA-Prüfungen zu den eigenen LVAs verfügbar sind</string>
    <string name="pref_kusss_exam_get_from_lva_title">Prüfungen nach LVA-Nr laden</string>
    <string name="pref_kusss_exam_get_from_lva_summary">findet Prüfungen zu LVAs auch aus früheren Semestern, ist dafür aber langsamer …</string>
    <string name="pref_app_override_theme_title">System-Theme ignorieren</string>
    <string name="pref_app_override_theme_summary">Das Theme wird vom System verwaltet. Wollen sie es ignorieren?</string>
    <string name="pref_app_use_light_theme_title">helles Design verwenden</string>
    <string name="pref_app_map_file_title">eigene Kartendatei</string>
    <string name="pref_stats_use_lva_bar_chart_summary">Balkendiagramm für offene und erledigte LVAs verwenden</string>
    <string name="pref_stats_use_lva_bar_chart_title">Diagramme</string>
    <string name="pref_stats_positive_grades_only_summary">Notendurchschnitt nur mit positiven Noten berechnen</string>
    <string name="pref_stats_positive_grades_only_title">besserer Notendurchschnitt für LVAs</string>
    <string name="pref_mensa_group_menu_by_day_title">nach Tag gruppieren</string>
    <string name="pref_mensa_group_menu_by_day_summary">Alle Menüs nach Tag gruppieren</string>
    <string name="pref_cat_tracking">Tracking</string>
    <string name="pref_tracking_errors_title">Fehler</string>
    <string name="pref_tracking_errors_summary">Fehler automatisch an Entwickler senden damit schneller darauf reagiert werden kann.</string>
    <string name="pref_courses_show_with_assessment_only_title">nur LVAs mit Noten anzeigen</string>
    <string name="pref_courses_show_with_assessment_only_summary">Für vergangene Semester werden nur LVAs angezeigt die bereits benotet wurden.</string>
    <string name="settings_app_title">App</string>
    <string name="about_app_summary">Das ist eine neue JKU, KUSSS, ÖH, … App für Studenten der JKU Linz.\n\nDie App ist noch in Entwicklung und die am meisten benötigten Funktionen sind bereits implementiert.\n\nWenn Sie Fragen, Probleme oder Wünsche haben, schreiben Sie eine E-Mail an die Entwickler!\nBesitzer eines GitHub-Accounts können auch einfach hier posten: https://github.com/marunjar/anewjkuapp/issues </string>
    <string name="oeh_rights_1_title" translatable="false">Deine Rechte und Pflichten</string>
    <string name="oeh_rights_1_summary" translatable="false">Studierende an der JKU haben bestimmte Rechte und Pflichten. Das Studienrecht ist im Universitätsgesetz (UG 2002) und in der Satzung der JKU (Studienrecht) geregelt.</string>
    <string name="oeh_rights_2_title" translatable="false">Was passiert wenn ich beim Schummeln erwischt werde?</string>
    <string name="oeh_rights_2_summary" translatable="false">Wenn du unerlaubte Hilfsmittel benützt, wird deine Prüfung für ungültig erklärt und auf deine Antrittsmöglichkeiten angerechnet. Das bedeutet, dass du dadurch einen Antritt verspielen kannst.</string>
    <string name="oeh_rights_3_title" translatable="false">Wie lange darf ich in schriftliche Klausuren Einsicht nehmen?</string>
    <string name="oeh_rights_3_summary" translatable="false">Du hast das Recht innerhalb von sechs Monaten nach Ablegung einer Prüfung in deine Arbeit Einsicht zu nehmen. Weiters darfst du jede von dir abgelegte Prüfung inkl. Beurteilungsunterlagen und Prüfungsprotokolle kopieren (außer bei Multiple-Choice Klausuren).</string>
    <string name="oeh_rights_4_title" formatted="false" translatable="false">Ist die Festlegung einer höheren Mindestpunktezahl als 50% bei Klausuren zulässig?</string>
    <string name="oeh_rights_4_summary" translatable="false">Ja. Grundsätzlich obliegt es dem/der LVA-LeiterIn den Schwierigkeitsgrad und die Mindestanforderungen für eine positive Absolvierung festzulegen, sofern im Studienplan keine abweichenden Bestimmungen enthalten sind.</string>
    <string name="oeh_rights_5_title" translatable="false">Wie oft darf ich eine LVA wiederholen?</string>
    <string name="oeh_rights_5_summary" translatable="false">Bei allen Prüfungen hast du 4 Wiederholungen, d.h. insgesamt 5 Antritte. Prüfungstechnisch gibt es zwei unterschiedliche Kursformen. Einerseits solche mit "immanentem Prüfungscharakter", d.h. die Note setzt sich aus mehreren Leistungsprüfungen wie z.B. Hausübungen zusammen. Hier kannst du ab der dritten Wiederholung eine kommissionelle Prüfung verlangen; dein Antrag muss vom Vizerektor für Lehre genehmigt werden. Bei allen anderen LVAs und Fachprüfungen muss ab der dritten Wiederholung eine kommissionelle Prüfung abgehalten werden. Kommissionelle Prüfungen sind vom Modus her meist gleich, werden aber von mehreren ProfessorInnen beurteilt. Bei positiven Prüfungen ist eine Wiederholung innerhalb von 6 Monaten möglich, wenn du eine bessere Note haben willst.</string>
    <string name="oeh_rights_6_title" translatable="false">Links</string>
    <string name="oeh_rights_6_summary" translatable="false"><a href="http://www.jku.at/content/e262/e239/e3257">Detaillierte Informationen zum Studienrecht der JKU</a>\n\n<a href="http://www.ris.bka.gv.at/GeltendeFassung.wxe?Abfrage=Bundesnormen&amp;Gesetzesnummer=20002128">Das Universitätsgesetz</a></string>
    <string name="mensa_title_classic" translatable="false">Classic</string>
    <string name="mensa_title_choice" translatable="false">Wochenangebot</string>
    <string name="mensa_title_khg" translatable="false">KHG</string>
    <string name="mensa_title_raab" translatable="false">RaabMensa</string>
    <string name="calendar_title_exam">Prüfungen</string>
    <string name="calendar_title_lva">LVAs</string>
</resources>