<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory app:title="@string/settings_app_title">
        <SwitchPreferenceCompat
            app:defaultValue="@bool/pref_default_override_theme"
            app:key="pref_key_override_theme"
            app:summary="@string/pref_app_override_theme_summary"
            app:title="@string/pref_app_override_theme_title" />

        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:dependency="pref_key_override_theme"
            app:disableDependentsState="false"
            app:key="pref_key_use_light_theme"
            app:title="@string/pref_app_use_light_theme_title" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/title_map">
        <ListPreference
            app:key="pref_key_map_file"
            app:summary=""
            app:title="@string/pref_app_map_file_title" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/title_lvas">
        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:key="pref_key_courses_show_with_assessment_only"
            app:summary="@string/pref_courses_show_with_assessment_only_summary"
            app:title="@string/pref_courses_show_with_assessment_only_title" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/title_stats">
        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:key="pref_key_use_lva_bar_chart"
            app:summary="@string/pref_stats_use_lva_bar_chart_summary"
            app:title="@string/pref_stats_use_lva_bar_chart_title" />
        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:key="pref_key_positive_grades_only"
            app:summary="@string/pref_stats_positive_grades_only_summary"
            app:title="@string/pref_stats_positive_grades_only_title" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/title_mensa">
        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:key="pref_key_group_menu_by_day"
            app:summary="@string/pref_mensa_group_menu_by_day_summary"
            app:title="@string/pref_mensa_group_menu_by_day_title" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/pref_cat_tracking">
        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:key="pref_key_tracking_errors"
            app:summary="@string/pref_tracking_errors_summary"
            app:title="@string/pref_tracking_errors_title" />
    </PreferenceCategory>
</PreferenceScreen>