<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory app:title="@string/title_kusss">
        <Preference app:title="@string/pref_cat_update_password">
            <intent android:action="org.voidsink.anewjkuapp.prefs.LOGIN" />
        </Preference>

        <ListPreference
            app:defaultValue="85"
            app:entries="@array/pref_kusss_sync_interval_entries"
            app:entryValues="@array/pref_kusss_sync_interval_values"
            app:key="pref_key_sync_interval"
            app:summary="@string/pref_kusss_sync_interval_summary"
            app:title="@string/pref_kusss_sync_interval_title" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/title_grades">
        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:key="pref_key_notify_grade"
            app:summary="@string/pref_kusss_grade_notify_summary"
            app:title="@string/pref_kusss_notify_title" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/title_exams">
        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:key="pref_key_notify_exam"
            app:summary="@string/pref_kusss_exam_notify_summary"
            app:title="@string/pref_kusss_notify_title" />

        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:key="pref_key_get_exams_from_lva"
            app:summary="@string/pref_kusss_exam_get_from_lva_summary"
            app:title="@string/pref_kusss_exam_get_from_lva_title" />
    </PreferenceCategory>

</PreferenceScreen>