<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clipToPadding="false"
    android:padding="@dimen/activity_horizontal_margin"
    android:scrollbarStyle="outsideOverlay">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/Text.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/oeh_rights_1_title"
            android:textColor="?attr/colorAccent" />

        <TextView
            android:id="@+id/oeh_rights_1_summary"
            style="@style/oeh_text_content"
            android:text="@string/oeh_rights_1_summary" />

        <TextView
            style="@style/oeh_text_title"
            android:text="@string/oeh_rights_2_title" />

        <TextView
            android:id="@+id/oeh_rights_2_summary"
            style="@style/oeh_text_content"
            android:text="@string/oeh_rights_2_summary" />

        <TextView
            style="@style/oeh_text_title"
            android:text="@string/oeh_rights_3_title" />

        <TextView
            android:id="@+id/oeh_rights_3_summary"
            style="@style/oeh_text_content"
            android:text="@string/oeh_rights_3_summary" />

        <TextView
            style="@style/oeh_text_title"
            android:text="@string/oeh_rights_4_title" />

        <TextView
            android:id="@+id/oeh_rights_4_summary"
            style="@style/oeh_text_content"
            android:text="@string/oeh_rights_4_summary" />

        <TextView
            style="@style/oeh_text_title"
            android:text="@string/oeh_rights_5_title" />

        <TextView
            android:id="@+id/oeh_rights_5_summary"
            style="@style/oeh_text_content"
            android:text="@string/oeh_rights_5_summary" />

        <TextView
            style="@style/oeh_text_title"
            android:text="@string/oeh_rights_6_title" />

        <TextView
            android:id="@+id/oeh_rights_6_summary"
            style="@style/oeh_text_content"
            android:text="@string/oeh_rights_6_summary" />
    </LinearLayout>

</ScrollView>