<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory app:title="@string/title_calendar">
        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:key="pref_key_notify_calendar"
            app:summary="@string/pref_kusss_calendar_notify_summary"
            app:title="@string/pref_kusss_notify_title" />

        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:key="pref_key_use_calendar_view"
            app:summary="@string/pref_kusss_use_calendar_view_summary"
            app:title="@string/pref_kusss_use_calendar_view_title" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/calendar_title_lva">
        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:key="pref_key_extend_calendar_lva"
            app:summary="@string/pref_kusss_calendar_extend_summary"
            app:title="@string/pref_kusss_calendar_extend_title" />

        <org.voidsink.anewjkuapp.base.TwoLinesListPreference
            app:dependency="pref_key_extend_calendar_lva"
            app:key="pref_key_extended_calendar_lva"
            app:summary="@string/pref_kusss_calendar_extended_summary"
            app:title="@string/pref_kusss_calendar_extended_title" />

        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:dependency="pref_key_extend_calendar_lva"
            app:disableDependentsState="true"
            app:key="pref_key_sync_calendar_lva"
            app:summary="@string/pref_kusss_calendar_sync_summary"
            app:title="@string/pref_kusss_calendar_sync_title" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/calendar_title_exam">
        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:key="pref_key_extend_calendar_exam"
            app:summary="@string/pref_kusss_calendar_extend_summary"
            app:title="@string/pref_kusss_calendar_extend_title" />

        <org.voidsink.anewjkuapp.base.TwoLinesListPreference
            app:dependency="pref_key_extend_calendar_exam"
            app:key="pref_key_extended_calendar_exam"
            app:summary="@string/pref_kusss_calendar_extended_summary"
            app:title="@string/pref_kusss_calendar_extended_title" />

        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:dependency="pref_key_extend_calendar_exam"
            app:disableDependentsState="true"
            app:key="pref_key_sync_calendar_exam"
            app:summary="@string/pref_kusss_calendar_sync_summary"
            app:title="@string/pref_kusss_calendar_sync_title" />
    </PreferenceCategory>
</PreferenceScreen>